# example_pybind11

./: .gitignore  README.md  pyproject.toml  setup.py
cpp/: native_spl.cpp
spl/: __init__.py
tests/: test_native.py
