[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pybind11~=2.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "spl"
description = ""
keywords = ["spl"]
requires-python = ">=3.8"
dynamic = ["version", "readme"]

dependencies = [
]

[project.optional-dependencies]
tests = [
  'coverage>=5.0.3',
  'pytest',
  'pytest-benchmark>=3.2.1',
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "spl.__version__"}

[tool.setuptools]
packages = ["spl"]
